--- a/carousel-vue.html
+++ b/carousel-vue.html
@@ -6,7 +6,7 @@
 	    <meta name="apple-mobile-web-app-status-bar-style" content="black" />
 	    <title>carousel - Vue</title>
 	    <meta id="viewport" name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0" />
-	    <meta name="description" content="A Vue powered minesweeper game. Responsive design with classic Windows look." /><meta property="og:description" content="A Vue powered minesweeper game. Responsive design with classic Windows look." />
+	    <meta name="description" content="A Vue powered carousel plugin" /><meta property="og:description" content="A Vue powered minesweeper game. Responsive design with classic Windows look." />
 	    <link href="carousel-vue.css" rel="stylesheet" type="text/css" />
 	</head>
     <body>
