--- a/excel-manipulator.html
+++ b/excel-manipulator.html
@@ -32,6 +32,9 @@ textarea {
 	width: 30%;
 	display: inline-block;
 }
+.copy-btn {
+	display: none;
+}
 #emailPreview{
 	width: 100%;
 	padding: 20px;
@@ -59,7 +62,7 @@ textarea {
 		<li>First column must be unique identifier(recipient ID or something)</li>
 		<li>Consecutive multiple lines can share the same identifier, if some lines don't have identifier, they are considered to share the most immediate previous identifier.</li>
 		<li>All headers should be distinctive</li>
-		<li>"result" is taken for default output header, don't use it in data source</li>
+		<li>"result" and "title" are taken for default output header, don't use them in data source</li>
 	</ol>
 	<p>
 		<textarea id="src" style="width: 99.5%; height: 180px; word-wrap" type="text" /></textarea>
@@ -84,7 +87,7 @@ textarea {
 				<textarea class="content-temp" id="beforeTxt"></textarea>
 			</p>
 			<p>
-				<span>Main: </span>
+				<span>Main(iteration): </span>
 				<textarea class="content-temp" id="arrange_profile"></textarea>
 			</p>
 			<p>
@@ -102,7 +105,7 @@ textarea {
 				<textarea class="content-temp" id="beforeTxt_tc"></textarea>
 			</p>
 			<p>
-				<span>繁體的主要內容: </span>
+				<span>繁體的主要內容（循環輸出）: </span>
 				<textarea class="content-temp" id="arrange_profile_tc"></textarea>
 			</p>
 			<p>
@@ -120,7 +123,7 @@ textarea {
 				<textarea class="content-temp" id="beforeTxt_sc"></textarea>
 			</p>
 			<p>
-				<span>简体的主要内容: </span>
+				<span>简体的主要内容（循环输出）: </span>
 				<textarea class="content-temp" id="arrange_profile_sc"></textarea>
 			</p>
 			<p>
@@ -138,20 +141,8 @@ textarea {
 		<textarea id="result" style="width: 100%; height: 200px; word-wrap" type="text" /></textarea>
 	</div>
 	<p>&nbsp;</p>
-  <p>Email Preview(if email address is found)</p>
+  <p>Email Preview(if email address is found)&nbsp;<button id="expandAll">Expand All</button>&nbsp;<button id="collapseAll">Collapse All</button></p>
 	<div id="emailPreview">
-		<p>tree: 123@123.com <button class="preview-btn">Preview Expand</button></p>
-		<div class="preview-unit">
-			<p><strong>Title:</strong></p>
-			<p>
-				请处理剩余的xxx以符合xxx最新政策变化( xxx ID: tree )
-			</p>
-			<hr>
-			<p><strong>Content:</strong></p>
-			<div>
-				<p>以下是关于plant的详情:</p><p>你的apple(plant)有1个<br>你的pear(plant)有2个<br>你的peach(plant)有3个<br>你的cherry(plant)有4个</p><p>请做这个，然后做那个。要做这个，请进入 xxx > xxx > xxx。</p><p>如有任何疑问，欢迎随时联系我们。</p><p>Thanks & Regards<br>xxx Team</p>
-			</div>
-		</div>
 	</div>
 </div>
 <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js'></script>
@@ -167,7 +158,12 @@ bird					sparrow	12
 bird					rooster	13
 vegetable	plant	US	no	asdf@1234.com	tomato	100
 `;
-var preview_pro = `<p>{identifier}({region}): {email} <button class="preview-btn">Preview Expand</button></p>
+var preview_pro = `<p>{identifier}({region}): <span class="email">{email}</span>
+<button class="preview-btn">Preview Expand</button>&nbsp;
+<button class="copy-btn copy-title">Copy Title</button>&nbsp;
+<button class="copy-btn copy-content">Copy Content</button>&nbsp;
+<button class="copy-btn copy-email">Copy email</button>
+</p>
 <div class="preview-unit">
 <p><strong>Title:</strong></p>
 <p>{title}</p>
@@ -355,19 +351,63 @@ function loadData() {
 		$(".preview-btn").click(function() {
 			togglePreview($(this));
 		});
+		$(".copy-title").click(function() {
+			var node = $(this).parent().next();
+			var node2 = $(node).children().eq(1).get(0);
+			copyHTML(node2);
+		});
+		$(".copy-content").click(function() {
+			var node = $(this).parent().next();
+			$(node).children().eq(0).hide();
+			$(node).children().eq(1).hide();
+			$(node).children().eq(2).hide();
+			var node2 = $(node).get(0);
+			copyHTML(node2);
+			$(node).children().eq(0).show();
+			$(node).children().eq(1).show();
+			$(node).children().eq(2).show();
+		});
+		$(".copy-email").click(function() {
+			var node = $(this).parent().find(".email");
+			var node2 = $(node).get(0);
+			copyHTML(node2);
+		});
 	}
 }
+$("#expandAll").click(function() {
+	$(".preview-unit").slideDown();
+	$(".preview-btn").html("Preview Collapse");
+	$(".copy-btn").show();
+});
+$("#collapseAll").click(function() {
+	$(".preview-unit").slideUp();
+	$(".preview-btn").html("Preview Expand");
+	$(".copy-btn").hide();
+});
+
 
 function togglePreview(btn) {
 	var btnTxt = $(btn).html();
 	if (btnTxt == "Preview Expand") {
 		$(btn).html("Preview Collapse");
+		$(btn).parent().find(".copy-btn").show();
 		$(btn).parent().next().slideDown();
 	} else {
 		$(btn).html("Preview Expand");
+		$(btn).parent().find(".copy-btn").hide();
 		$(btn).parent().next().slideUp();
 	}
 }
-    </script>
+
+function copyHTML(node) {
+	//https://stackoverflow.com/questions/34191780/javascript-copy-string-to-clipboard-as-text-html
+	window.getSelection().removeAllRanges();
+  var range = document.createRange();
+  range.selectNode(node);
+  window.getSelection().addRange(range);
+  document.execCommand('copy');
+	window.getSelection().removeAllRanges();
+}
+</script>
 </body>
 </html>
