--- a/minesweeper-vue.html
+++ b/minesweeper-vue.html
@@ -142,7 +142,7 @@
     				</div>
     				<div class="slide-general" :class="slides_class[1]">
     					<h3>游戏说明</h3>
-    					<ol style="margin-right: 20px;">
+    					<ol class="game-guide">
     						<li>打开页面时会自动生成适应设备屏幕尺寸的雷区和地雷数</li>
     						<li>电脑端可右击未翻开的方块对其进行标记或取消标记</li>
     						<li>若确定某个已翻开的方块周围的地雷都已标记，同时点击鼠标左键和右键可翻开剩余方块</li>
@@ -157,6 +157,7 @@
     				<div class="slide-general" :class="slides_class[3]">
     					<h3>地雷设置</h3>
     					<p>输入您想要的地雷数</p>
+    					<p>最多{{mine_max}}个</p>
     					<p><input type="number" style="width: 40px;" min="1" :max="mine_max" @input="get_mine_input(mine_input)" @keyup.enter="set_mine(mine_input)" v-model="mine_input"/></p>
     					<p><input type="button" value="确定" @click="set_mine(mine_input)"/></p>
     				</div>
