changed: scroll behavior

--- a/minesweeper-vue.html
+++ b/minesweeper-vue.html
@@ -9,7 +9,7 @@
 	    <meta name="description" content="A Vue powered minesweeper game. Responsive design with classic Windows look." /><meta property="og:description" content="A Vue powered minesweeper game. Responsive design with classic Windows look." />
 	    <link href="minesweeper-vue.css" rel="stylesheet" type="text/css" />
 	</head>
-    <body>
+    <body style="overflow: hidden;">
     	<div id="app" v-cloak>
     		<div class="outer-block" :style="{width: line_width + 'px'}">
     			<div style="display: flex; justify-content: center; margin-bottom: 10px;">
