--- a/minesweeper-vue.html
+++ b/minesweeper-vue.html
@@ -7,9 +7,9 @@
 	    <title>Minesweeper - 扫雷(VueJS版)</title>
 	    <meta id="viewport" name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0" />
 	    <meta name="description" content="A Vue powered minesweeper game. Responsive design with classic Windows look." /><meta property="og:description" content="A Vue powered minesweeper game. Responsive design with classic Windows look." />
-	    <link href="minesweeper-vue.css" rel="stylesheet" type="text/css" />
+	    <link href="minesweeper-vue.css?2020-11-25-2338" rel="stylesheet" type="text/css" />
 	</head>
-    <body style="overflow: hidden;">
+    <body>
     	<div id="app" v-cloak>
     		<div class="outer-block" :style="{width: line_width + 'px'}">
     			<div style="display: flex; justify-content: center; margin-bottom: 10px;">
@@ -168,6 +168,6 @@
     		</div>
     	</div>
 	    <script src='vue.min.js'></script>
-	    <script src='minesweeper-vue.js'></script>
+	    <script src='minesweeper-vue.js?2020-11-25-2339'></script>
   	</body>
 </html>
