--- a/minesweeper-vue.html
+++ b/minesweeper-vue.html
@@ -169,5 +169,6 @@
     	</div>
 	    <script src='vue.min.js'></script>
 	    <script src='minesweeper-vue.js?2020-11-25-2339'></script>
+	    <script src='/js/statcounter.js'></script>
   	</body>
 </html>
