--- a/minesweeper-vue.html
+++ b/minesweeper-vue.html
@@ -8,6 +8,7 @@
 	    <meta id="viewport" name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0" />
 	    <meta name="description" content="A Vue powered minesweeper game. Responsive design with classic Windows look." /><meta property="og:description" content="A Vue powered minesweeper game. Responsive design with classic Windows look." />
 	    <link href="minesweeper-vue.css?2020-11-25-2338" rel="stylesheet" type="text/css" />
+	    <style>.statcounter{width: 1px;height: 1px;overflow: hidden;display: block;position: fixed;}</style>
 	</head>
     <body>
     	<div id="app" v-cloak>
