--- a/minesweeper-vue.html
+++ b/minesweeper-vue.html
@@ -9,6 +9,7 @@
 	    <meta name="description" content="A Vue powered minesweeper game. Responsive design with classic Windows look." /><meta property="og:description" content="A Vue powered minesweeper game. Responsive design with classic Windows look." />
 	    <link href="minesweeper-vue.css?2020-11-25-2338" rel="stylesheet" type="text/css" />
 	    <style>.statcounter{width: 1px;height: 1px;overflow: hidden;display: block;position: fixed;}</style>
+	    <script src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js" data-ad-client="ca-pub-2790001673900763" async></script>
 	</head>
     <body>
     	<div id="app" v-cloak>
